[package]
name = "libsolv"
version = "0.1.0"
authors = ["Igor Gnatenko <ignatenko@redhat.com>"]

[workspace]
members = ["systest"]


[features]
ext = ["libsolvext-sys"]
tools = ["ext", "clap"]
rpmdb = ["ext"]
pubkey = ["ext"]
rpmmd = ["ext"]
suse = ["ext"]
comps = ["ext"]
debian = ["ext"]
helix = ["ext"]
arch = ["ext"]
haiku = ["ext"]
appdata = ["ext"]


[dependencies]
libsolv-sys = { path = "libsolv-sys" }
libsolvext-sys = { path = "libsolvext-sys", optional = true}
libc = "0.2"
clap = {version = "2", optional = true}

[[bin]]
name = "testsolv"
path = "src/bin/testsolv.rs"
required-features = ["tools", "ext"]

[[bin]]
name = "deepchase"
path = "src/bin/deepchase.rs"
required-features = ["tools", "rpmmd"]
